src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nborder on"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
