src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dhF500-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault window height: F500\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 500, bounds: 1231 × 680, states: []
size: 1231 × 500, bounds: 1231 × 680, states: [Activated]
